--- a/docs/docs-ref-autogen/excel/excel.worksheetfreezepanes.yml
+++ b/docs/docs-ref-autogen/excel/excel.worksheetfreezepanes.yml
@@ -1,13 +1,13 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 9ce016e89c5ba5a2294973b99dd307d5ee444010
-ms.sourcegitcommit: d356f1545c328d4b59ce814fcab8191e4231f1dc
+ms.openlocfilehash: b56b193c85e9117364d0355daf706d7742edab69
+ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/13/2019
-ms.locfileid: "29980070"
+ms.lasthandoff: 02/20/2019
+ms.locfileid: "30104924"
 items:
 - uid: excel.Excel.WorksheetFreezePanes
-  summary: '<span data-ttu-id="04587-101">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="04587-101">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>'
+  summary: '<span data-ttu-id="46a5f-101">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="46a5f-101">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>'
   name: Excel.WorksheetFreezePanes
   fullName: Excel.WorksheetFreezePanes
   langs:
@@ -26,7 +26,7 @@ items:
   - excel.Excel.WorksheetFreezePanes.toJSON
   - excel.Excel.WorksheetFreezePanes.unfreeze
 - uid: excel.Excel.WorksheetFreezePanes.context
-  summary: <span data-ttu-id="04587-102">与对象关联的请求上下文。</span><span class="sxs-lookup"><span data-stu-id="04587-102">The request context associated with the object.</span></span> <span data-ttu-id="04587-103">这将连接到 Office 主机应用程序的过程外接程序的过程。</span><span class="sxs-lookup"><span data-stu-id="04587-103">This connects the add-in's process to the Office host application's process.</span></span>
+  summary: <span data-ttu-id="46a5f-102">与该对象关联的请求上下文。</span><span class="sxs-lookup"><span data-stu-id="46a5f-102">The request context associated with the object.</span></span> <span data-ttu-id="46a5f-103">这会将加载项的进程连接到 Office 主机应用程序的进程。</span><span class="sxs-lookup"><span data-stu-id="46a5f-103">This connects the add-in's process to the Office host application's process.</span></span>
   name: context
   fullName: context
   langs:
@@ -39,10 +39,10 @@ items:
       - RequestContext
 - uid: excel.Excel.WorksheetFreezePanes.freezeAt
   summary: >-
-    <span data-ttu-id="04587-104">设置活动工作表视图中的冻结单元格。</span><span class="sxs-lookup"><span data-stu-id="04587-104">Sets the frozen cells in the active worksheet view.</span></span> <span data-ttu-id="04587-105">提供的范围对应于将冻结顶层和左窗格中的单元格。</span><span class="sxs-lookup"><span data-stu-id="04587-105">The range provided corresponds to cells that will be frozen in the top- and left-most pane.</span></span>
+    <span data-ttu-id="46a5f-104">设置活动工作表视图中的冻结单元格。</span><span class="sxs-lookup"><span data-stu-id="46a5f-104">Sets the frozen cells in the active worksheet view.</span></span> <span data-ttu-id="46a5f-105">提供的范围与将在最顶部和最左侧窗格中冻结的单元格相对应。</span><span class="sxs-lookup"><span data-stu-id="46a5f-105">The range provided corresponds to cells that will be frozen in the top- and left-most pane.</span></span>
 
 
-    <span data-ttu-id="04587-106">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="04587-106">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="46a5f-106">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="46a5f-106">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: freezeAt(frozenRange)
   fullName: freezeAt(frozenRange)
   langs:
@@ -53,18 +53,18 @@ items:
     return:
       type:
       - void
-      description: "\n#### <a name=\"examples\"></a><span data-ttu-id=\"04587-107\">示例</span><span class=\"sxs-lookup\"><span data-stu-id=\"04587-107\">Examples</span></span>\n\n```typescript\nawait Excel.run(async (context) => {\n    const sheet = context.workbook.worksheets.getItem(\"Sample\");\n\n    // Freeze the specified range in top-and-left-most pane of the worksheet.\n    sheet.freezePanes.freezeAt(sheet.getRange(\"H2:K5\"));\n\n    await context.sync();\n});\n```"
+      description: "\n#### <a name=\"examples\"></a><span data-ttu-id=\"46a5f-107\">示例</span><span class=\"sxs-lookup\"><span data-stu-id=\"46a5f-107\">Examples</span></span>\n\n```typescript\nawait Excel.run(async (context) => {\n    const sheet = context.workbook.worksheets.getItem(\"Sample\");\n\n    // Freeze the specified range in top-and-left-most pane of the worksheet.\n    sheet.freezePanes.freezeAt(sheet.getRange(\"H2:K5\"));\n\n    await context.sync();\n});\n```"
     parameters:
     - id: frozenRange
-      description: <span data-ttu-id="04587-108">代表要冻结，则为 null，删除所有的冻结的窗格的单元格区域。</span><span class="sxs-lookup"><span data-stu-id="04587-108">A range that represents the cells to be frozen, or null to remove all frozen panes.</span></span>
+      description: <span data-ttu-id="46a5f-108">一个代表要冻结的单元格的区域, 或为 null 以删除所有冻结的窗格。</span><span class="sxs-lookup"><span data-stu-id="46a5f-108">A range that represents the cells to be frozen, or null to remove all frozen panes.</span></span>
       type:
       - Range | string
 - uid: excel.Excel.WorksheetFreezePanes.freezeColumns
   summary: >-
-    <span data-ttu-id="04587-109">就地冻结工作表的第一列。</span><span class="sxs-lookup"><span data-stu-id="04587-109">Freeze the first column(s) of the worksheet in place.</span></span>
+    <span data-ttu-id="46a5f-109">就地冻结工作表的第一列。</span><span class="sxs-lookup"><span data-stu-id="46a5f-109">Freeze the first column(s) of the worksheet in place.</span></span>
 
 
-    <span data-ttu-id="04587-110">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="04587-110">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="46a5f-110">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="46a5f-110">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: freezeColumns(count)
   fullName: freezeColumns(count)
   langs:
@@ -75,18 +75,18 @@ items:
     return:
       type:
       - void
-      description: "\n#### <a name=\"examples\"></a><span data-ttu-id=\"04587-111\">示例</span><span class=\"sxs-lookup\"><span data-stu-id=\"04587-111\">Examples</span></span>\n\n```typescript\nawait Excel.run(async (context) => {\n    const sheet = context.workbook.worksheets.getItem(\"Sample\");\n\n    // Freeze the first two columns in the worksheet.\n    sheet.freezePanes.freezeColumns(2);\n\n    await context.sync();\n});\n```"
+      description: "\n#### <a name=\"examples\"></a><span data-ttu-id=\"46a5f-111\">示例</span><span class=\"sxs-lookup\"><span data-stu-id=\"46a5f-111\">Examples</span></span>\n\n```typescript\nawait Excel.run(async (context) => {\n    const sheet = context.workbook.worksheets.getItem(\"Sample\");\n\n    // Freeze the first two columns in the worksheet.\n    sheet.freezePanes.freezeColumns(2);\n\n    await context.sync();\n});\n```"
     parameters:
     - id: count
-      description: <span data-ttu-id="04587-112">可选要冻结，或零以解除冻结所有列的列数</span><span class="sxs-lookup"><span data-stu-id="04587-112">Optional number of columns to freeze, or zero to unfreeze all columns</span></span>
+      description: <span data-ttu-id="46a5f-112">可选的要冻结的列数, 或为零取消对所有列的冻结</span><span class="sxs-lookup"><span data-stu-id="46a5f-112">Optional number of columns to freeze, or zero to unfreeze all columns</span></span>
       type:
       - number
 - uid: excel.Excel.WorksheetFreezePanes.freezeRows
   summary: >-
-    <span data-ttu-id="04587-113">就地冻结工作表的顶行。</span><span class="sxs-lookup"><span data-stu-id="04587-113">Freeze the top row(s) of the worksheet in place.</span></span>
+    <span data-ttu-id="46a5f-113">就地冻结工作表的顶行。</span><span class="sxs-lookup"><span data-stu-id="46a5f-113">Freeze the top row(s) of the worksheet in place.</span></span>
 
 
-    <span data-ttu-id="04587-114">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="04587-114">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="46a5f-114">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="46a5f-114">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: freezeRows(count)
   fullName: freezeRows(count)
   langs:
@@ -97,18 +97,18 @@ items:
     return:
       type:
       - void
-      description: "\n#### <a name=\"examples\"></a><span data-ttu-id=\"04587-115\">示例</span><span class=\"sxs-lookup\"><span data-stu-id=\"04587-115\">Examples</span></span>\n\n```typescript\nawait Excel.run(async (context) => {\n    const sheet = context.workbook.worksheets.getItem(\"Sample\");\n\n    // Freeze the top two rows in the worksheet.\n    sheet.freezePanes.freezeRows(2);\n\n    await context.sync();\n});\n```"
+      description: "\n#### <a name=\"examples\"></a><span data-ttu-id=\"46a5f-115\">示例</span><span class=\"sxs-lookup\"><span data-stu-id=\"46a5f-115\">Examples</span></span>\n\n```typescript\nawait Excel.run(async (context) => {\n    const sheet = context.workbook.worksheets.getItem(\"Sample\");\n\n    // Freeze the top two rows in the worksheet.\n    sheet.freezePanes.freezeRows(2);\n\n    await context.sync();\n});\n```"
     parameters:
     - id: count
-      description: <span data-ttu-id="04587-116">冻结，或零取消冻结所有行的行的可选号码</span><span class="sxs-lookup"><span data-stu-id="04587-116">Optional number of rows to freeze, or zero to unfreeze all rows</span></span>
+      description: <span data-ttu-id="46a5f-116">可选的要冻结的行数, 或零取消对所有行的冻结</span><span class="sxs-lookup"><span data-stu-id="46a5f-116">Optional number of rows to freeze, or zero to unfreeze all rows</span></span>
       type:
       - number
 - uid: excel.Excel.WorksheetFreezePanes.getLocation
   summary: >-
-    <span data-ttu-id="04587-117">获取用于描述活动工作表视图中的冻结单元格的区域。</span><span class="sxs-lookup"><span data-stu-id="04587-117">Gets a range that describes the frozen cells in the active worksheet view.</span></span> <span data-ttu-id="04587-118">冻结的范围是对应于冻结顶层和左窗格中的单元格。</span><span class="sxs-lookup"><span data-stu-id="04587-118">The frozen range is corresponds to cells that are frozen in the top- and left-most pane.</span></span>
+    <span data-ttu-id="46a5f-117">获取用于描述活动工作表视图中的冻结单元格的区域。</span><span class="sxs-lookup"><span data-stu-id="46a5f-117">Gets a range that describes the frozen cells in the active worksheet view.</span></span> <span data-ttu-id="46a5f-118">冻结的范围对应于顶部和最左侧窗格中冻结的单元格。</span><span class="sxs-lookup"><span data-stu-id="46a5f-118">The frozen range is corresponds to cells that are frozen in the top- and left-most pane.</span></span>
 
 
-    <span data-ttu-id="04587-119">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="04587-119">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="46a5f-119">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="46a5f-119">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: getLocation()
   fullName: getLocation()
   langs:
@@ -122,10 +122,10 @@ items:
       description: ''
 - uid: excel.Excel.WorksheetFreezePanes.getLocationOrNullObject
   summary: >-
-    <span data-ttu-id="04587-120">获取用于描述活动工作表视图中的冻结单元格的区域。</span><span class="sxs-lookup"><span data-stu-id="04587-120">Gets a range that describes the frozen cells in the active worksheet view.</span></span> <span data-ttu-id="04587-121">冻结的范围是对应于冻结顶层和左窗格中的单元格。</span><span class="sxs-lookup"><span data-stu-id="04587-121">The frozen range is corresponds to cells that are frozen in the top- and left-most pane.</span></span> <span data-ttu-id="04587-122">如果没有任何冻结的窗格，则返回 null 对象。</span><span class="sxs-lookup"><span data-stu-id="04587-122">If there is no frozen pane, returns a null object.</span></span>
+    <span data-ttu-id="46a5f-120">获取用于描述活动工作表视图中的冻结单元格的区域。</span><span class="sxs-lookup"><span data-stu-id="46a5f-120">Gets a range that describes the frozen cells in the active worksheet view.</span></span> <span data-ttu-id="46a5f-121">冻结的范围对应于顶部和最左侧窗格中冻结的单元格。</span><span class="sxs-lookup"><span data-stu-id="46a5f-121">The frozen range is corresponds to cells that are frozen in the top- and left-most pane.</span></span> <span data-ttu-id="46a5f-122">如果没有冻结的窗格, 则返回 null 对象。</span><span class="sxs-lookup"><span data-stu-id="46a5f-122">If there is no frozen pane, returns a null object.</span></span>
 
 
-    <span data-ttu-id="04587-123">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="04587-123">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="46a5f-123">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="46a5f-123">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: getLocationOrNullObject()
   fullName: getLocationOrNullObject()
   langs:
@@ -136,9 +136,9 @@ items:
     return:
       type:
       - excel.Excel.Range
-      description: "\n#### <a name=\"examples\"></a><span data-ttu-id=\"04587-124\">示例</span><span class=\"sxs-lookup\"><span data-stu-id=\"04587-124\">Examples</span></span>\n\n```typescript\nawait Excel.run(async (context) => {\n    const sheet = context.workbook.worksheets.getItem(\"Sample\");\n    const frozenRange = sheet.freezePanes.getLocationOrNullObject();\n    frozenRange.load(\"address\");\n\n    await context.sync();\n\n    if (frozenRange.isNullObject) {\n        OfficeHelpers.UI.notify(`The worksheet does not contain a frozen pane.`);\n    } else {\n        console.log(`The address of the frozen range (cells that are frozen in the top-and-left-most pane) is \"${frozenRange.address}\"`);\n    }\n});\n```"
+      description: "\n#### <a name=\"examples\"></a><span data-ttu-id=\"46a5f-124\">示例</span><span class=\"sxs-lookup\"><span data-stu-id=\"46a5f-124\">Examples</span></span>\n\n```typescript\nawait Excel.run(async (context) => {\n    const sheet = context.workbook.worksheets.getItem(\"Sample\");\n    const frozenRange = sheet.freezePanes.getLocationOrNullObject();\n    frozenRange.load(\"address\");\n\n    await context.sync();\n\n    if (frozenRange.isNullObject) {\n        console.log(`The worksheet does not contain a frozen pane.`);\n    } else {\n        console.log(`The address of the frozen range (cells that are frozen in the top-and-left-most pane) is \"${frozenRange.address}\"`);\n    }\n});\n```"
 - uid: excel.Excel.WorksheetFreezePanes.toJSON
-  summary: <span data-ttu-id="04587-125">重写 JavaScript`toJSON()`方法，为了提供更多有用的输出时 API 对象传递给`JSON.stringify()` <!-- -->。</span><span class="sxs-lookup"><span data-stu-id="04587-125">Overrides the JavaScript `toJSON()` method in order to provide more useful output when an API object is passed to `JSON.stringify()`<!-- -->.</span></span> <span data-ttu-id="04587-126">(`JSON.stringify`<!-- -->，反过来，调用`toJSON`对象传递给它的方法。)原始 Excel.WorksheetFreezePanes 对象是 API 对象，而`toJSON`方法返回一个普通的 JavaScript 对象 (类型为`Excel.Interfaces.WorksheetFreezePanesData` <!-- -->)，其中包含原始对象中的任何加载的子属性的浅表副本。</span><span class="sxs-lookup"><span data-stu-id="04587-126">(`JSON.stringify`<!-- -->, in turn, calls the `toJSON` method of the object that is passed to it.) Whereas the original Excel.WorksheetFreezePanes object is an API object, the `toJSON` method returns a plain JavaScript object (typed as `Excel.Interfaces.WorksheetFreezePanesData`<!-- -->) that contains shallow copies of any loaded child properties from the original object.</span></span>
+  summary: <span data-ttu-id="46a5f-125">重写 JavaScript `toJSON()`方法, 以便在将 API 对象传递到`JSON.stringify()` <!-- -->时提供更有用的输出。</span><span class="sxs-lookup"><span data-stu-id="46a5f-125">Overrides the JavaScript `toJSON()` method in order to provide more useful output when an API object is passed to `JSON.stringify()`<!-- -->.</span></span> <span data-ttu-id="46a5f-126">(`JSON.stringify`<!-- -->反过来, 也会调用传递`toJSON`给它的对象的方法。)尽管原始 WorksheetFreezePanes 对象是 API 对象, 但该`toJSON`方法返回一个纯 JavaScript 对象 (类型为`Excel.Interfaces.WorksheetFreezePanesData` <!-- -->), 其中包含原始对象中任何已加载的子属性的浅表副本。</span><span class="sxs-lookup"><span data-stu-id="46a5f-126">(`JSON.stringify`<!-- -->, in turn, calls the `toJSON` method of the object that is passed to it.) Whereas the original Excel.WorksheetFreezePanes object is an API object, the `toJSON` method returns a plain JavaScript object (typed as `Excel.Interfaces.WorksheetFreezePanesData`<!-- -->) that contains shallow copies of any loaded child properties from the original object.</span></span>
   name: toJSON()
   fullName: toJSON()
   langs:
@@ -158,10 +158,10 @@ items:
       description: ''
 - uid: excel.Excel.WorksheetFreezePanes.unfreeze
   summary: >-
-    <span data-ttu-id="04587-127">移除工作表中的所有冻结窗格。</span><span class="sxs-lookup"><span data-stu-id="04587-127">Removes all frozen panes in the worksheet.</span></span>
+    <span data-ttu-id="46a5f-127">移除工作表中的所有冻结窗格。</span><span class="sxs-lookup"><span data-stu-id="46a5f-127">Removes all frozen panes in the worksheet.</span></span>
 
 
-    <span data-ttu-id="04587-128">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="04587-128">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="46a5f-128">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="46a5f-128">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: unfreeze()
   fullName: unfreeze()
   langs:
@@ -172,4 +172,4 @@ items:
     return:
       type:
       - void
-      description: "\n#### <a name=\"examples\"></a><span data-ttu-id=\"04587-129\">示例</span><span class=\"sxs-lookup\"><span data-stu-id=\"04587-129\">Examples</span></span>\n\n```typescript\nawait Excel.run(async (context) => {\n    const sheet = context.workbook.worksheets.getItem(\"Sample\");\n    sheet.freezePanes.unfreeze();\n\n    await context.sync();\n});\n```"
+      description: "\n#### <a name=\"examples\"></a><span data-ttu-id=\"46a5f-129\">示例</span><span class=\"sxs-lookup\"><span data-stu-id=\"46a5f-129\">Examples</span></span>\n\n```typescript\nawait Excel.run(async (context) => {\n    const sheet = context.workbook.worksheets.getItem(\"Sample\");\n    sheet.freezePanes.unfreeze();\n\n    await context.sync();\n});\n```"
